@@ -123,12 +123,7 @@ Toad</a>.</p>
 
 
 <p>
-  &ldquo; I am super impressed with LilyPond.  Up to this point I have
-   been scrimping by with a patchwork of Finale Notepad, Cakewalk, and
-   hand-drawn ugliness.  Discovering LilyPond has been a real
-   treat.&rdquo;...<br> &ldquo; I've been using LilyPond for about a
-   week now... I want to take the time
-   to say:
+  &ldquo; I am super impressed with LilyPond [..]
 <blockquote>
 THIS IS THE BEST PROGRAM EVER!!!
 </blockquote>
@@ -137,7 +132,7 @@ Thank you all SO MUCH for your hard work and dedication!&rdquo;
 
 <p align="right">
   <em>
-    Vaylor Trucks Electric guitar player (Yes, <a
+    Vaylor Trucks, Electric guitar player (Yes, <a
     href="http://www.allmanbrothersband.com/modules.php?op=modload&name=userpage&file=content&page_id=12">related
     to</a>)
   </em>
