@@ -9,7 +9,18 @@
     <LINK REL="stylesheet" TYPE="text/css" HREF="@DEPTH@newweb.css">
     <LINK REL="shortcut icon" HREF="@IMAGES@shortcut.png">
     @SCRIPT@
-  </HEAD>
+
+<!-- Google tracking !-->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-68969-1";
+urchinTracker();
+</script>
+
+
+
+</HEAD>
   <BODY onload="@ONLOAD@">
     <DIV class="menu">
       @MENU@
